Added use of HTTP Service Interface Clients